# workflow

./: .dockerignore  .gcloudignore  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  cloudbuild.deploy.yaml  cloudbuild.test.yaml  cloudbuild.tests.yaml  cloudbuild.yaml  dag-manifest.yaml  docker-compose.override.yml  docker-compose.yml  entry.sh  entry.tests.sh  load-local-vars.sh  main.py  requirements-dev.txt  requirements.txt  setup.cfg
tests/example/: test_main.py
