[metadata]
name = pycog
version = 0.0.0

[options]
install_requires =

python_requires = >=3.9
package_dir =
    =src
packages = find:

# [options.extras_require]
# dev =
#     pytest

[options.packages.find]
where = src
exclude =
    tests*

[options.entry_points]
console_scripts =
    blueprint = blueprint.main:main
